[package]
name = "bar"
version = "0.1.0"
authors = ["Bendi11 <bkliebmann@gmail.com>"]
edition = "2018"

[[bin]]
name = "bar"

[dependencies]
bitstream-io = "1.1" # For lzss compression
thiserror = "1.0" # For easier errors
indicatif = "0.16.2" # For progress bar display in benchmarks and tests
clap = "2.33" # For binaries that take command line arguments

[dev-dependencies]
criterion = "0.3" # For benchmarking archive performance

[[bench]]
name = "lz"
harness = false

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
