[package]
name = "bar"
version = "0.1.0"
authors = ["Bendi11 <bkliebmann@gmail.com>"]
edition = "2018"

[[bin]]
name = "bar"

[dependencies]
thiserror = "1.0" # For easier errors
indicatif = "0.16.2" # For progress bar display in benchmarks and tests
clap = "2.33" # For binaries that take command line arguments
byteorder = "1.4" # For reading u16s and u32s in an easier and platform agnostic way
bitfield = "0.13" # For bitfields in archive file headers
chrono = "0.4" # For file timestamps
tempfile = "3.2" # For backing storage of archives
flate2 = "1.0" # For compressing files individually in archive

rmp = "0.8" # For header messagepack se/de serializing
rmpv = "0.4" # For heeader messagepack


[dev-dependencies]
criterion = "0.3" # For benchmarking archive performance

[[bench]]
name = "lz"
harness = false

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
