[package]
name = "bar"
version = "1.0.0"
authors = ["Bendi11 <bkliebmann@gmail.com>"]
edition = "2018"

[[bin]]
name = "bar"

[dependencies]
thiserror = "1.0" # For easier errors

sublime_fuzzy = "0.7.0" # For searching the archive for files and giving hints for unknown files
rustyline = "8.2"

indicatif = "0.16.2" # For progress bar display in benchmarks and tests
console = "0.14" # For console formatting in terminal applications
dialoguer = "0.8" # For input menus

clap = "2.33" # For binaries that take command line arguments
byteorder = "1.4" # For reading u64s in an easier and platform agnostic way
tempfile = "3.2" # For backing storage of archives
flate2 = "1.0" # For compressing files individually in archive

mime_guess = "2.0" # For guessing displayed file types

aes = "0.7"

rmp = "0.8" # For header messagepack se/de serializing
rmpv = "0.4" # For heeader messagepack

[dev-dependencies]
criterion = "0.3" # For benchmarking archive performance

[[bench]]
name = "pack"
harness = false

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
